[package]
name = "w32time"
version = "0.1.0"
authors = ["Nathan Moreau <nathan.moreau@m4x.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.winapi]
version = "0.3.8"
features = ["profileapi", "processthreadsapi", "winbase", "handleapi"]

[dependencies.clap]
version = "2.33.0"
default-features = false
features = ["suggestions"]

