[package]
name = "cmdtime"
version = "0.2.0"
authors = ["Nathan Moreau <nathan.moreau@m4x.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.winapi]
version = "0.3.8"
features = ["profileapi", "processthreadsapi", "winbase", "handleapi", "jobapi2", "ioapiset"]
